[FIX] height game sidebar on mobile

--- a/resources/assets/sass/component/nav.scss
+++ b/resources/assets/sass/component/nav.scss
@@ -1,4 +1,4 @@
-header {
+header:not(.modal__header) {
     @screen lg {
         height: 90px;
     }
